# tauri-executor

./: .replit  DEPLOYMENT_GUIDE.md  README.md  README_TEMPLATE.md  SYSTEM_OVERVIEW.md  TEMPLATE_GUIDE.md  client-direct-server.js  cross-platform-server.js  deploy-windows.bat  package-lock.json  package.json  serve.js  setup-cross-platform.sh  simple-server.js  windows-agent.ps1
attached_assets/: Pasted--Building-a-Tauri-App-to-Execute-Bundled-Executables-on-Windows-A-complete-guide-for-running-bu-1749546823367_1749546823367.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name--1749743325149_1749743325150.txt
dialog-tool/: build.bat  build.sh  dialog.cpp
src/: api.js  client-direct.html  client-direct.js  cross-platform.html  cross-platform.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  Cargo_broken.toml  Cargo_simple.toml  tauri.conf.json  tauri_v1.conf.json
src-tauri/binaries/: dialog-tool
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  simple_main.rs
