[package]
name = "tauri-executor"
version = "0.1.0"
description = "A Tauri App that executes bundled executables"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "tauri-executor"
path = "src/main.rs"

[lib]
name = "tauri_executor_lib"
crate-type = ["cdylib", "rlib"]
