[package]
name = "tauri-executor"
version = "0.1.0"
description = "A Tauri App that executes bundled executables"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
tauri = { version = "1.0.0", features = [ "shell-sidecar", "shell-open", "shell-execute", "path-all"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
